# knowledge-graphs

./: .gitignore  graph_data_science.ipynb  pyproject.toml
data/: example_report_en.md  example_report_long_en.md  example_report_nl.md
